# gpiozero

./: .gitignore  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  LICENCE.txt  LICENSE.rst  MANIFEST.in  Makefile  README.md  README.rst  RELEASE.rst  boards.py  copyrights  copyrights.cfg  coverage.cfg  mkdocs.yml  requirements-test.txt  requirements.txt  rtd_requirements.txt  setup.cfg  setup.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  postcreate.sh
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: api-change.md  bug.md  new-device.md
.github/workflows/: test.yml
debian/: changelog  clean  control  copyright  docs  pybuild.testfiles  python-gpiozero-doc.doc-base  python-gpiozero-doc.docs  python-gpiozero-doc.links  python3-gpiozero.manpages  rules  watch
debian/patches/: local-objects-inv.patch  no-coverage.patch  series  use-setup-cfg.patch
debian/source/: options
docs/: Makefile  api_boards.rst  api_exc.rst  api_fixtures.rst  api_fonts.rst  api_generic.rst  api_info.rst  api_input.rst  api_internal.rst  api_mcp230xx.rst  api_other.rst  api_output.rst  api_pins.rst  api_source_tools.rst  api_spi.rst  api_tones.rst  api_tools.rst  api_utils.rst  boards.md  changelog.rst  cli_env.rst  cli_pinout.rst  cli_pintest.rst  cli_tools.rst  compat.rst  conf.py  contributing.rst  development.rst  faq.rst  index.md  index.rst  inputs.md  installing.rst  license.rst  migrating_from_rpigpio.rst  notes.md  notes.rst  outputs.md  pi_zero_otg.rst  recipes.md  (+5 more)
docs/_static/: keep-me
docs/examples/: all_on_1.py  all_on_2.py  all_on_3.py  angular_servo.py  bluedot_led.py  bluedot_robot_1.py  bluedot_robot_2.py  button_1.py  button_2.py  button_3.py  button_4.py  button_camera_1.py  button_camera_2.py  button_led_1.py  button_led_2.py  button_shutdown.py  button_stop_motion.py  color_picker.py  combining_sources.py  cpu_temperature_bar_graph.py  custom_generator.py  custom_generator_finite.py  disk_usage_bar_graph.py  distance_sensor_1.py  distance_sensor_2.py  garden_light.py  internet_status_indicator.py  led_1.py  led_2.py  led_bargraph_1.py  led_bargraph_2.py  led_board_1.py  led_board_2.py  led_board_4.py  led_board_5.py  led_board_6.py  led_board_7.py  led_builtin.py  led_button.py  led_button_loop.py  (+63 more)
docs/images/: 7seg_multi.fzz  button.fzz  button_robot.fzz  class_graph  color_picker.fzz  composed_devices.dot  composite_device_hierarchy.dot  device_hierarchy.dot  device_pin_flowchart.dot  distance_sensor.fzz  gpio_device_hierarchy.dot  input_device_hierarchy.dot  internal_device_hierarchy.dot  led.fzz  led_button.fzz  led_char_display.fzz  ledbargraph.fzz  ledboard.fzz  light_sensor.fzz  mcp23017_led_button.fzz  motion_robot.fzz  motion_sensor.fzz  motor.fzz  music_box.fzz  other_device_hierarchy.dot  output_device_hierarchy.dot  potentiometer.fzz  reaction_game.fzz  rgb_led.fzz  rgbled_pot.fzz  robot.fzz  spi_device_hierarchy.dot  traffic_lights.fzz
docs/images/source_values/: combining_sources.dot  combining_sources_led_buttons.dot  custom_generator.dot  disk_usage_bar_graph.dot  garden_light.dot  led_button.dot  led_button_negated.dot  led_button_opposite.dot  matching_leds.dot  pwmled_pot.dot  random_led.dot  robot_pots_1.dot  robot_pots_2.dot  sin_values.dot  source_tool.dot  source_tool_candle.dot  source_tool_value_processor.dot  source_values.dot  timed_heat_lamp.dot  value_processing.dot
examples/: my_hat.py
gpio_components/: __init__.py  input_devices.py  output_devices.py
gpiozero/: __init__.py  boards.py  compat.py  devices.py  ep.py  exc.py  fonts.py  i2c.py  i2c_devices.py  input_devices.py  internal_devices.py  mixins.py  notes_data.py  other_devices.py  output_devices.py  output_devices.py~  pololu_devices.py  rotary_encoder.py  source_tools.py  spi.py  spi_devices.py  threads.py  tones.py  tools.py
gpiozero/cli/: pinout.py
gpiozero/fonts/: 14seg.txt  7seg.txt  __init__.py
gpiozero/pins/: __init__.py  data.py  exc.py  gpiod.py  lgpio.py  local.py  mcp230xx.py  mock.py  native.py  pi.py  pigpio.py  pigpiod.py  rgpio.py  rpigpio.py  rpio.py  spi.py  style.py
gpiozero/testing/: __init__.py  fixtures.py
gpiozerocli/: __init__.py  pinout.py  pintest.py
pytest_gpiozero/pins/: __init__.py  mock.py
scripts/: class_graph  copyrights  previewer
tests/: conftest.py  test_boards.py  test_compat.py  test_devices.py  test_fonts.py  test_i2c.py  test_inputs.py  test_internal_devices.py  test_mcp230xx.py  test_mixins.py  test_mock_pin.py  test_other_devices.py  test_outputs.py  test_pins_data.py  test_real_pins.py  test_rotary_encoder.py  test_source_tools.py  test_spi.py  test_spi_devices.py  test_tones.py  test_tools.py
tests/cli/: test_pinout.py
