[metadata]
name = gpiozero
version = 1.6.1
description = A simple interface to GPIO devices with Raspberry Pi
long_description = file:README.rst
author = Ben Nuttall
author_email = ben@bennuttall.com
url = https://gpiozero.readthedocs.io/
project_urls =
    Documentation = https://gpiozero.readthedocs.io/
    Source Code = https://github.com/gpiozero/gpiozero
    Issue Tracker = https://github.com/gpiozero/gpiozero/issues
keywords = raspberrypi gpio
license = BSD-3-Clause
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Developers
    Topic :: Education
    Topic :: System :: Hardware
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    colorzero

[options.package_data]
gpiozero =
    fonts/*.txt

[options.extras_require]
test =
    pytest
    pytest-cov
doc =
    sphinx
    sphinx-rtd-theme

[options.entry_points]
console_scripts =
    pinout = gpiozerocli.pinout:main
gpiozero_pin_factories =
    pigpio  = gpiozero.pins.pigpio:PiGPIOFactory
    lgpio   = gpiozero.pins.lgpio:LGPIOFactory
    rpigpio = gpiozero.pins.rpigpio:RPiGPIOFactory
    rpio    = gpiozero.pins.rpio:RPIOFactory
    native  = gpiozero.pins.native:NativeFactory
    mock    = gpiozero.pins.mock:MockFactory
    PiGPIOPin  = gpiozero.pins.pigpio:PiGPIOFactory
    RPiGPIOPin = gpiozero.pins.rpigpio:RPiGPIOFactory
    RPIOPin    = gpiozero.pins.rpio:RPIOFactory
    NativePin  = gpiozero.pins.native:NativeFactory
gpiozero_mock_pin_classes =
    mockpin          = gpiozero.pins.mock:MockPin
    mockpwmpin       = gpiozero.pins.mock:MockPWMPin
    mockchargingpin  = gpiozero.pins.mock:MockChargingPin
    mocktriggerpin   = gpiozero.pins.mock:MockTriggerPin

[tools:pytest]
addopts = -rsx --cov --tb=short
testpaths = tests

[coverage:run]
source = gpiozero
branch = true

[coverage:report]
ignore_errors = true
show_missing = true
exclude_lines =
    pragma: no cover
    assert False
    raise AssertionError
    raise NotImplementedError
    pass
    if __name__ == .__main__.:

[copyrights:settings]
include =
  **/*.py
  **/*.rst
exclude =
  docs/examples/*.py
  docs/license.rst
license = LICENSE.rst
preamble =
  GPIO Zero: a library for controlling the Raspberry Pi's GPIO pins
strip-preamble = false
